Finalized animations and tweaked a bug where words would change instantly. Added keyboard

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -7,6 +7,7 @@
     width: 100%;
     display: block;
     border: 1px solid #D3D6DA;
+    margin-bottom: 30px;
 }
 
 @media screen and (min-width: 765px) {
