--- a/frontend/src/components/TweetleRow.css
+++ b/frontend/src/components/TweetleRow.css
@@ -22,8 +22,8 @@
     background: #fff;
     border-color: #333;
     color: black;
-    --background: #5ac85a;
-    --border-color: #5ac85a;
+    --background: #1DA1F2;
+    --border-color: #1DA1F2;
     
 }
 
@@ -32,8 +32,8 @@
     background: #fff;
     border-color: #333;
     color: black;
-    --background: #a1a1a1;
-    --border-color: #a1a1a1;
+    --background: #AAB8C2;;
+    --border-color: #AAB8C2;;
     
 }
 
@@ -42,8 +42,8 @@
     background: #fff;
     border-color: #333;
     color: black;
-    --background: #e2cc68;
-    --border-color: #e2cc68;
+    --background: #657786;
+    --border-color: #657786;
     
 }
 
