--- a/frontend/src/components/Modal.css
+++ b/frontend/src/components/Modal.css
@@ -17,7 +17,7 @@
 }
 
 .modal .word{
-    color: #ff004c;
+    color: #1DA1F2;
     font-weight: bold;
     font-size: 0.8em;
     text-transform: uppercase;
