--- a/frontend/src/components/TweetleRow.css
+++ b/frontend/src/components/TweetleRow.css
@@ -17,6 +17,15 @@
     font-size: 2.5em;
 }
 
+@media screen and (max-width: 376px) {
+    .row > div{
+        width: 40px;
+        height: 40px;
+        font-size: 1.5em;
+        line-height: 40px;
+    }
+  }
+
 .row > div.green {
     animation: flip 0.5s ease forwards;
     background: #fff;
@@ -109,3 +118,5 @@
         border-color: #333;
     }
 }
+
+
