--- a/frontend/src/components/TweetleRow.css
+++ b/frontend/src/components/TweetleRow.css
@@ -15,6 +15,9 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: 2.5em;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+     user-select: none;
 }
 
 @media screen and (max-width: 376px) {
